# crypto-hud

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CUSTOM_UI_PLUGIN_DEVELOPMENT.md  Cargo.toml  LICENSE  LOCALIZATION.md  MACOS.md  README.ar.md  README.es.md  README.id.md  README.ja.md  README.ko.md  README.md  README.pt-BR.md  README.ru.md  README.tr.md  README.vi.md  README.zh-CN.md  README.zh-TW.md  SECURITY.md  mise.toml
.cargo/: audit.toml
.github/workflows/: ci.yml  macos.yml  release-portable.yml
crates/crypto-hud/: Cargo.toml  build.rs
crates/crypto-hud-core/: Cargo.toml
crates/crypto-hud-core/src/: lib.rs
crates/crypto-hud-market/: Cargo.toml
crates/crypto-hud-market/src/: lib.rs
crates/crypto-hud-runtime/: Cargo.toml
crates/crypto-hud-runtime/src/: lib.rs
crates/crypto-hud-shell-state/: Cargo.toml
crates/crypto-hud-shell-state/src/: lib.rs
crates/crypto-hud-taskbar/: Cargo.toml  build.rs
crates/crypto-hud-taskbar/native/: taskbar_bridge.cpp  taskbar_protocol.h
crates/crypto-hud-taskbar/src/: lib.rs
crates/crypto-hud/plugins/: README.md
crates/crypto-hud/plugins/com.cryptohud.focus-ticker/: widget.json
crates/crypto-hud/plugins/com.cryptohud.focus-ticker/ui/: main.slint
crates/crypto-hud/plugins/com.cryptohud.market-board/: widget.json
crates/crypto-hud/plugins/com.cryptohud.market-board/ui/: main.slint
crates/crypto-hud/plugins/com.cryptohud.market-compass/: widget.json
crates/crypto-hud/plugins/com.cryptohud.market-compass/ui/: main.slint
crates/crypto-hud/plugins/com.cryptohud.orbit-pulse/: widget.json
crates/crypto-hud/plugins/com.cryptohud.orbit-pulse/ui/: main.slint
crates/crypto-hud/plugins/com.cryptohud.status-strip/: widget.json
crates/crypto-hud/plugins/com.cryptohud.status-strip/ui/: main.slint
crates/crypto-hud/plugins/com.cryptohud.trust-card/: widget.json
crates/crypto-hud/plugins/com.cryptohud.trust-card/ui/: main.slint
crates/crypto-hud/plugins/com.example.stage3-price-card/: widget.json
crates/crypto-hud/plugins/com.example.stage3-price-card/ui/: main.slint
crates/crypto-hud/src/: autostart.rs  coin_icons.rs  desktop_shell.rs  feature_flags.rs  i18n.rs  main.rs  notifications.rs  plugin.rs  runtime_bridge.rs  settings_window.rs  shortcuts.rs  state_bridge.rs  taskbar_market.rs  theme.rs  updater.rs  widget_host.rs  window_manager.rs
crates/crypto-hud/src/settings_window/: settings_actions.rs  settings_models.rs  settings_theme.rs
crates/crypto-hud/ui/: app.manifest  models.slint  price-card-window.slint  price-card.slint  settings-window.slint  shared-controls.slint  shell-windows.slint
crates/crypto-hud/ui/fonts/: README.md
docs/performance-reports/: README.ar.md  README.es.md  README.id.md  README.ja.md  README.ko.md  README.md  README.pt-BR.md  README.ru.md  README.tr.md  README.vi.md  README.zh-CN.md  README.zh-TW.md
packaging/macos/: Info.plist.in
packaging/windows/: install.ps1  uninstall.ps1
scripts/: build-taskbar-extension.ps1  gui-dynamic-layout-smoke.ps1  gui-plugin-hot-reload-smoke.ps1  gui-plugin-scale-smoke.ps1  gui-quote-board-layout-smoke.ps1  gui-settings-interaction-smoke.ps1  gui-smoke.ps1  gui-widget-scale-smoke.ps1  install-update-package.ps1  macos-package-common-test.sh  macos-package-common.sh  macos-package-smoke.sh  package-macos.sh  package-portable-windows.ps1  package-smoke.ps1  package-windows.ps1  portable-package-smoke.ps1  release-process-check.ps1  run-app.ps1  run-bash.ps1  sign-windows.ps1  single-instance-smoke.ps1  taskbar-dll-smoke.ps1  update-smoke.ps1
