[package]
name = "crypto-hud-market"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Toolkit-free market feed runtime for Crypto HUD"

[dependencies]
anyhow = "1.0"
crypto-hud-core = { path = "../crypto-hud-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "3.3.0", features = ["socks-proxy"] }
