[package]
name = "crypto-hud-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Widget runtime view contracts for Crypto HUD"

[dependencies]
anyhow = "1.0"
crypto-hud-core = { path = "../crypto-hud-core" }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
