[package]
name = "crypto-hud-taskbar"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Experimental Windows taskbar market display bridge for Crypto HUD"
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
cc = "1.2"
