[package]
name = "crypto-hud"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Slint native desktop widget shell for Crypto HUD"

[dependencies]
anyhow = "1.0"
auto-launch = "0.6"
crypto-hud-core = { path = "../crypto-hud-core" }
crypto-hud-market = { path = "../crypto-hud-market" }
crypto-hud-runtime = { path = "../crypto-hud-runtime" }
crypto-hud-shell-state = { path = "../crypto-hud-shell-state" }
global-hotkey = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = "1.0"
single-instance = "0.3.3"
slint = { version = "1.17.0", default-features = false, features = ["std", "backend-winit", "renderer-software", "accessibility", "compat-1-2", "system-tray"] }
slint-interpreter = { version = "1.17.0", default-features = false, features = ["std", "backend-winit", "renderer-software", "accessibility", "compat-1-2", "system-tray"] }
spin_on = "0.1"
sys-locale = "0.3"
ureq = { version = "2.12", features = ["socks-proxy"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Registry", "Win32_UI_HiDpi", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = "0.3.2"

[build-dependencies]
slint-build = "1.17.0"
winresource = "0.1.31"
